--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Lider.cl</title>
+   <title>Lider.cl</title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Lider.cl</a>
+      <a class="navbar-brand" href="/">Lider.cl</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -71,7 +71,7 @@
         <div class="list-group">
           <a href="#" class="list-group-item" onclick="cleanProductList(); getProducts('carnes')">Carnes y Pescados</a>
           <a href="#" class="list-group-item" onclick="cleanProductList(); getProducts('frutas')">Frutas y Verduras</a>
-          <a href="#" class="list-group-item" onclick="cleanProductList(); getProducts('leche')">Frescos y Lácteos</a>
+          <a href="#" class="list-group-item" onclick="cleanProductList(); getProducts('leches')">Frescos y Lacteos</a>
         </div>
 
       </div>
